@@ -22,7 +22,7 @@
 
 export PROG_NAME='iRedMail'
 export PROG_NAME_LOWERCASE='iredmail'
-export PROG_VERSION='1.5.1'
+export PROG_VERSION='1.5.2'
 
 export DATE="$(/bin/date +%Y.%m.%d.%H.%M.%S)"
 
