@@ -1,0 +1,2 @@
+USE vmail;
+ALTER TABLE domain_admins CONVERT TO CHARACTER SET utf8 COLLATE utf8_unicode_ci;
