@@ -1,3 +1,8 @@
+iRedMail-1.5.2:
+    * Fixed issues:
+        - [MySQL] Can not remove record which contains non-ascii character
+          from table `domain_admins` with unexpected collate.
+
 iRedMail-1.5.1:
     * Updated packages:
         + Roundcube webmail -> 1.5.2.
